Fix Selenium 4.46 crash